--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium
+    command: ["/bin/bash", "./wait-for-it.sh", "selenium:4444", "--", "python", "./main.py"]
+    volumes:
+      - "./output:/app/output"
