iterating elements by toogle with error in first toggle

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   selenium:
     image: selenium/standalone-chrome
+    hostname: localhost
     ports:
       - 4444:4444
 
