--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   selenium:
-    image: selenium/standalone-chrome
+    image: selenium/standalone-chrome:3.141
     hostname: localhost
     ports:
       - 4444:4444
@@ -12,6 +12,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium
-    command: ["/bin/bash", "./wait-for-it.sh", "selenium:4444", "--", "python", "./main.py"]
+    command: ["/bin/bash", "./wait-for-it.sh", "localhost:4444", "--", "python", "./main.py"]
     volumes:
       - "./output:/app/output"
