--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,6 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium
-    command: ["/bin/bash", "./wait-for-it.sh", "localhost:4444", "--", "python", "./main.py"]
+    command: ["/bin/bash", "./wait-for-it-master/wait-for-it.sh", "localhost:4444", "--", "python", "./main.py"]
     volumes:
       - "./output:/app/output"
