reformatted docker service command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium
-    command: ["/bin/bash", "./wait-for-it-master/wait-for-it.sh", "localhost:4444", "--", "python", "./src/main.py"]
+    command: /bin/bash -c "./wait-for-it-master/wait-for-it.sh localhost:4444
+             -- python ./src/main.py"
     volumes:
       - "./output:/app/output"
 
@@ -22,4 +23,5 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - selenium
-    command: [ "/bin/bash", "./wait-for-it-master/wait-for-it.sh", "localhost:4444", "--", "python", "-m", "unittest", "tests.website_test" ]
+    command: /bin/bash -c "./wait-for-it-master/wait-for-it.sh localhost:4444
+             -- python -m unittest tests.website_test"
