--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - selenium
     command: /bin/bash -c "./wait-for-it-master/wait-for-it.sh localhost:4444
-             -- python ./src/main.py"
+             -- python -m src.main"
     volumes:
       - "./output:/app/output"
 
